# myAmpereHA

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASE_NOTES.md  hacs.json  pyproject.toml
custom_components/ampere_energy/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  modbus_client.py  sensor.py
custom_components/ampere_energy/translations/: en.json  es.json
tests/: __init__.py  conftest.py  test_coordinator.py  test_modbus_client.py
tools/: README.md  modbus_scanner.py
